# drea-thin-kernel

./: CONFORMANCE.md  README.md  pyproject.toml
drea/: audit.py  checkpoint.py  cid.py  cli.py  emergence.py  federated.py  file_protocol.py  gene.py  github_publisher.py  identity.py  loop.py  memory.py  skill.py  tools.py  util.py
drea_thin_kernel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
