[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "drea-thin-kernel"
version         = "1.5.0"
description     = "DREA Thin Kernel v1.05 — Minimal Compliant Implementation + browser_automate"
requires-python = ">=3.11"
dependencies    = [
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[project.scripts]
drea = "drea.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
timeout      = 60
addopts      = "-v --tb=short"
